# Curie

./: benchmark.ipynb  gene_sl_gene.tsv
1_sli_algo_benchmark/: README.md  pyproject.toml
jorge benchmark/: .gitignore  filtering_synlethdb.ipynb  negative_sampling_slkb.ipynb  requirements.txt
jorge benchmark/sli_algo/: sli-algo.ipynb  sli-algo.py
jorge_benchmark/: filtering_slkb.ipynb
jorge_benchmark/sli_algo/: sli-algo.py
jorge_benchmark/sli_algo/.ipynb_checkpoints/: sli-algo-checkpoint.ipynb
jorge_benchmark/sli_algo/sli-algo outputs/: final_table_newdata.csv
new algo/: LICENSE  Makefile
new_algo/: .gitattributes
new_algo/data/interim/: reactome genes list (to include).xlsx
new_algo/scripts/: main.py
new_algo/src/sli_algo/: main.py  sli_algo.py
synlethdb-benchmark/: benchmark.ipynb  requirements.txt  synlethdb_known_nonslis.xlsx  synlethdb_known_slis.xlsx
synlethdb-benchmark2/: .gitignore  benchmark custom cutoff.ipynb  benchmark_slkb.ipynb  benchmark_slkb_3_50.ipynb  benchmark_synlethdb.ipynb  cell lines.ipynb  delete_me.ipynb  filtering_slkb.ipynb  negative_sampling_slkb.ipynb  requirements.txt  unique_mutants_list.ipynb
synlethdb-benchmark2/cell lines/: cell lines.ipynb
synlethdb-benchmark2/sli_algo/: .gitattributes  sli-algo.ipynb  sli-algo.py
synlethdb-benchmark2/sli_algo/sli-algo inputs/: CRISPR_gene_effect.csv  OmicsExpressionProteinCodingGenesTPMLogp1BatchCorrected_24Q2.csv  unique_mutants_tested.csv
synlethdb-benchmark2/sli_algo/sli-algo outputs/: final_table.csv  results_newdata.csv
